Bug 1821557 - Fix misaligned today pane label in status bar. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D172195

--HG--
extra : amend_source : c102ce7646a92f8e03fae147e985b31b85d09173

--- a/calendar/base/themes/common/calendar.css
+++ b/calendar/base/themes/common/calendar.css
@@ -77,7 +77,7 @@
 #calendar-status-todaypane-button > stack > .toolbarbutton-day-text {
   text-align: center;
   margin-inline-start: 0;
-  margin-bottom: -3px;
+  margin-bottom: 0;
   font-size: 7pt;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
